<resources>
    <string name="app_name">Ensaf8</string>


    <!-- Button-->
    <string name="pause">NotFallow</string>
    <string name="resume">Fallow!</string>

    <!-- onboarding layout -->

    <!-- toast messages -->
    <string name="toast_message_permissions_granted">Permissions granted.</string>
    <string name="toast_message_unable_to_start_app">Unable to start Rendezvous.</string>


    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_map">CheckNet</string>
    <string name="nav_item_bookMark">BookMarks</string>
    <string name="nav_item_insertIndivi">InsertIndividual</string>
    <string name="nav_item_export">CreatReport!</string>
    <string name="nav_item_import">Import</string>


    <string name="login">Log In</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_map</item>
        <item>@string/nav_item_bookMark</item>
        <item>@string/nav_item_insertIndivi</item>
        <item>@string/nav_item_export</item>
        <item>@string/nav_item_import</item>
    </string-array>


    <string name="txt_news">NEWS!</string>
    <string name="txt_tasks">TASK!</string>



    <string name="title_home">HOME</string>
    <string name="title_map">MAP</string>
    <string name="title_search">SEARCH</string>


    <string name="search_hint">نام</string>


    <!-- onboarding layout -->
    <string name="layout_onboarding_description_app_icon">Rendezvous App Icon</string>
    <string name="layout_onboarding_p_app_claim">Location sharing</string>
    <string name="layout_onboarding_h2_request_permissions">Ensaf cannot work without these permissions:</string>
    <string name="layout_onboarding_h3_permission_location">LOCATION</string>
    <string name="layout_onboarding_p_permission_location">Ensaf needs accurate GPS data to be able to record your movements. If the GPS data is not available or not accurate enough, Rendezvous uses location data from cell tower and Wi-Fi triangulation.</string>
    <string name="layout_onboarding_h3_permission_storage">STORAGE</string>
    <string name="layout_onboarding_p_permission_storage">Ensaf uses osmdroid, which caches map tiles on Android\'s external storage. You can find the map cache in the osmdroid folder on the top level of the user-facing file system.</string>
    <string name="layout_onboarding_button_okay">Okay</string>



</resources>
