<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/onboarding" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:scrollbars="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <!--<ImageView
                android:id="@+id/trackbook_icon"
                android:layout_width="62dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/layout_onboarding_description_app_icon"
                app:srcCompat="@drawable/ic_rendezvous_logo" />-->

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/main_onboarding_text"
                    android:text="@string/app_name"
                    android:id="@+id/h2_app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/main_onboarding_text"
                    android:text="@string/layout_onboarding_p_app_claim"
                    android:id="@+id/p_app_claim" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/layout_onboarding_h2_request_permissions"
            android:id="@+id/h2_request_permissions"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/layout_onboarding_h3_permission_location"
            android:id="@+id/h3_permission_location" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/layout_onboarding_p_permission_location"
            android:id="@+id/p_permission_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/layout_onboarding_h3_permission_storage"
            android:id="@+id/h3_permission_storage"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/layout_onboarding_p_permission_storage"
            android:id="@+id/p_permission_storage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_onboarding_button_okay"
            android:id="@+id/button_okay_permission"
            android:layout_gravity="end"/>

    </LinearLayout>
    <include
        android:id="@+id/navigation"
        layout="@layout/element_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
